--- a/FX.Mobile.DeveloperTools/FX.Mobile.DeveloperTools.csproj
+++ b/FX.Mobile.DeveloperTools/FX.Mobile.DeveloperTools.csproj
@@ -54,7 +54,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>Tools.ico</ApplicationIcon>
+    <ApplicationIcon>App.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup>
     <ManifestCertificateThumbprint>C469D9E907B1D3850C34F10EA4779F834761D1DE</ManifestCertificateThumbprint>
@@ -68,7 +68,16 @@
   <PropertyGroup>
     <SignManifests>true</SignManifests>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>FX.Mobile.DeveloperTools.Program</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
+    <Reference Include="IISExpress.Automation">
+      <HintPath>..\Libraries\IISExpress.Automation.dll</HintPath>
+    </Reference>
+    <Reference Include="Ionic.Zip">
+      <HintPath>..\packages\DotNetZip.1.9.1.8\lib\net20\Ionic.Zip.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -83,33 +92,77 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Content\CreateDevEnvControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Content\CreateDevEnvControl.Designer.cs">
+      <DependentUpon>CreateDevEnvControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="Content\CreateProductControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Content\CreateProductControl.Designer.cs">
       <DependentUpon>CreateProductControl.cs</DependentUpon>
     </Compile>
-    <Compile Include="FormMain.cs">
+    <Compile Include="Controls\ActionPanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\ActionPanel.Designer.cs">
+      <DependentUpon>ActionPanel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\ProductControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\ProductControl.Designer.cs">
+      <DependentUpon>ProductControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\FormLaunchWeb.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormMain.Designer.cs">
+    <Compile Include="UI\FormLaunchWeb.Designer.cs">
+      <DependentUpon>FormLaunchWeb.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\FormMain.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\FormMain.Designer.cs">
       <DependentUpon>FormMain.cs</DependentUpon>
     </Compile>
-    <Compile Include="FormTest.cs">
+    <Compile Include="UI\FormTest.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormTest.Designer.cs">
+    <Compile Include="UI\FormTest.Designer.cs">
       <DependentUpon>FormTest.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UI\MetroFormBase.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\MetroFormBase.Designer.cs">
+      <DependentUpon>MetroFormBase.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Utility\FileIcon.cs" />
+    <Compile Include="Utility\ShellLink.cs" />
+    <EmbeddedResource Include="Content\CreateDevEnvControl.resx">
+      <DependentUpon>CreateDevEnvControl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Content\CreateProductControl.resx">
       <DependentUpon>CreateProductControl.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FormMain.resx">
+    <EmbeddedResource Include="Controls\ActionPanel.resx">
+      <DependentUpon>ActionPanel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\ProductControl.resx">
+      <DependentUpon>ProductControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\FormLaunchWeb.resx">
+      <DependentUpon>FormLaunchWeb.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\FormMain.resx">
       <DependentUpon>FormMain.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FormTest.resx">
+    <EmbeddedResource Include="UI\FormTest.resx">
       <DependentUpon>FormTest.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -121,7 +174,11 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="UI\MetroFormBase.resx">
+      <DependentUpon>MetroFormBase.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="FX.Mobile.DeveloperTools_TemporaryKey.pfx" />
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -142,7 +199,7 @@
     <EmbeddedResource Include="Templates\Mobile1_2\src\ApplicationModule.js" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Tools.ico" />
+    <Content Include="App.ico" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
