--- a/FX.Mobile.DeveloperTools/FX.Mobile.DeveloperTools.csproj
+++ b/FX.Mobile.DeveloperTools/FX.Mobile.DeveloperTools.csproj
@@ -132,7 +132,11 @@
     <Compile Include="Managers\DeploymentManager.cs" />
     <Compile Include="Managers\IISExpressManager.cs" />
     <Compile Include="Managers\LaunchManager.cs" />
+    <Compile Include="Managers\ManagerEnums.cs" />
+    <Compile Include="Managers\ProductManager.cs" />
+    <Compile Include="Managers\ResourceFileManager.cs" />
     <Compile Include="Model\AppNotification.cs" />
+    <Compile Include="Model\StringReplacement.cs" />
     <Compile Include="UI\FormLaunchWeb.cs">
       <SubType>Form</SubType>
     </Compile>
