--- a/FX.Mobile.DeveloperTools/FX.Mobile.DeveloperTools.csproj
+++ b/FX.Mobile.DeveloperTools/FX.Mobile.DeveloperTools.csproj
@@ -133,8 +133,9 @@
     <Compile Include="Managers\IISExpressManager.cs" />
     <Compile Include="Managers\LaunchManager.cs" />
     <Compile Include="Managers\ManagerEnums.cs" />
+    <Compile Include="Managers\MobileResourceManager.cs" />
     <Compile Include="Managers\ProductManager.cs" />
-    <Compile Include="Managers\ResourceFileManager.cs" />
+    <Compile Include="Managers\TemplateManager.cs" />
     <Compile Include="Model\AppNotification.cs" />
     <Compile Include="Model\StringReplacement.cs" />
     <Compile Include="UI\FormLaunchWeb.cs">
